--- a/chat_app/templates/chat_app/chatscreen.html
+++ b/chat_app/templates/chat_app/chatscreen.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
 </head>
 <body>
@@ -23,9 +23,9 @@
             <ul class="people">
                 <li class="person" data-chat="person1">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt="" />
-                    <!-- <span class="name">Thomas Bangalter</span>
+                    <span class="name">Thomas Bangalter</span>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">I was wondering...</span> -->
+                    <span class="preview">I was wondering...</span>
                 </li>
                 <li class="person" data-chat="person2">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/dog.png" alt="" />
@@ -193,7 +193,7 @@ you blind bitch</span>
     </div>
 </div>
 <!-- partial -->
-  <script  src="{% static 'script.js' %}"></script>
+  <script type="text/javascript" src="{% static 'script.js' %}"></script>
 
 </body>
 </html>
