--- a/chat_app/static/style.css
+++ b/chat_app/static/style.css
@@ -258,6 +258,7 @@ body {
   background-color: #eceff1;
   width: calc(100% - 58px);
   border-radius: 5px;
+  z-index: 1000;
 }
 .container .right .write input {
   font-size: 16px;
