--- a/chat_app/templates/chat_app/chatscreen.html
+++ b/chat_app/templates/chat_app/chatscreen.html
@@ -20,14 +20,14 @@
                 <input type="text" placeholder="Search" />
                 <a href="javascript:;" class="search"></a>
             </div>
-            <ul class="people">
-                <li class="person" data-chat="person1">
+            <ul class="people" id="people">
+                <!-- <li class="person" data-chat="person1">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt="" />
                     <span class="name">Thomas Bangalter</span>
                     <span class="time">2:09 PM</span>
                     <span class="preview">I was wondering...</span>
-                </li>
-                <li class="person" data-chat="person2">
+                </li> -->
+                <!-- <li class="person" data-chat="person2">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/dog.png" alt="" />
                     <span class="name">Dog Woofson</span>
                     <span class="time">1:44 PM</span>
@@ -57,7 +57,7 @@ you blind bitch</span>
                     <span class="name">Drake</span>
                     <span class="time">2:09 PM</span>
                     <span class="preview">howdoyoudoaspace</span>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div class="right">
@@ -185,9 +185,9 @@ you blind bitch</span>
             </div>
             <div class="write">
                 <a href="javascript:;" class="write-link attach"></a>
-                <input type="text" />
+                <input id="message-content" name="message-content" type="text" />
                 <a href="javascript:;" class="write-link smiley"></a>
-                <a href="javascript:;" class="write-link send"></a>
+                <a href="javascript:;" class="write-link send" onclick="sendNewMessage()"></a>
             </div>
         </div>
     </div>
