--- a/chat_app/templates/chat_app/room.html
+++ b/chat_app/templates/chat_app/room.html
@@ -13,8 +13,8 @@
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
-            'ws://'
-            + window.location.host
+            'wss://'
+            + "https://framechange-messaging.herokuapp.com"
             + '/ws/chat/'
             + roomName
             + '/'
